--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:web": "npm start --prefix apps/web",
+    "start:api": "npm run dev --prefix apps/api",
+    "start": "concurrently \"npm run start:web\" \"npm run start:api\""
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0"
   },
   "keywords": [],
   "author": "",
